--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
     <meta property="og:title" content="Best Movies Ever" />
     <meta property="og:description" content="The best SpartaCoding project ever" />
-    <meta property="og:image" content="{{ url_for('static', filename='ogimage.png') }}" />
+    <meta property="og:image" content="{{ url_for('static', filename='ogimage.jpg') }}" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
